--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="master.css" />
-        <title>Quiz App</title>
-        <meta name="description" content="Quiz App" />
-    </head>
-    <body>
-        <header>
-            <p>Quiz Time</p>
-        </header>
-        <main class="container">
-            <section class="bodyHead">
-                <span class="questionNo"><span></span></span>
-                <span class="timeCounter"></span>
-            </section>
-            <button class="start">Press to start</button>
-            <section class="question-div"></section>
-            <section class="answers"></section>
-            <input type="submit" class="sub" value="Next" />
-        </main>
-        <script src="main.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="master.css" />
+    <script
+      src="https://kit.fontawesome.com/326ea70cfe.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Quiz App</title>
+    <meta name="description" content="Quiz App" />
+  </head>
+  <body>
+    <header>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Friends_logo.svg/1186px-Friends_logo.svg.png"
+        alt=""
+      />
+      <div class="dark-mode">
+        <i class="fa-solid fa-moon fa-spin" id="moon"></i>
+        <i class="fa-solid fa-cloud-sun" id="sun"></i>
+      </div>
+    </header>
+    <main class="container">
+      <section class="bodyHead">
+        <span class="questionNo"><span></span></span>
+        <span class="timeCounter"></span>
+      </section>
+      <input type="text" class="user-input" placeholder="Enter Your name" />
+      <button class="start">Press to start</button>
+      <section class="question-div"></section>
+      <section class="answers"></section>
+      <input type="submit" class="sub" value="Next" />
+    </main>
+    <script src="main.js"></script>
+  </body>
 </html>
