--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
   </head>
   <body>
     <header>
-      <img
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Friends_logo.svg/1186px-Friends_logo.svg.png"
-        alt=""
-      />
+      <img src="Friends_logo.png" alt="" />
       <div class="dark-mode">
         <i class="fa-solid fa-moon fa-spin" id="moon"></i>
         <i class="fa-solid fa-cloud-sun" id="sun"></i>
@@ -28,7 +25,12 @@
         <span class="questionNo"><span></span></span>
         <span class="timeCounter"></span>
       </section>
-      <input type="text" class="user-input" placeholder="Enter Your name" />
+      <input
+        type="text"
+        class="user-input"
+        required
+        placeholder="Enter Your name"
+      />
       <button class="start">Press to start</button>
       <section class="question-div"></section>
       <section class="answers"></section>
