--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       src="https://kit.fontawesome.com/326ea70cfe.js"
       crossorigin="anonymous"
     ></script>
-    <title>Quiz App</title>
-    <meta name="description" content="Quiz App" />
+    <title>Friends Quiz</title>
+    <meta name="description" content=" The One with the Embryos" />
   </head>
   <body>
     <header>
